feat(soul-blazer): Add asset pipeline, Magic wiki, and Maps wiki
- Add asset_pipeline.py for bidirectional asset conversion
- Add Soul Blazer - Magic.wikitext documenting all 8 magic types
- Add Soul Blazer - Maps.wikitext with 32 maps across 6 acts
- Update main wiki page with links to new sections

--- a/Games/SNES/Soul Blazer (SNES)/Wiki/Soul Blazer.wikitext
+++ b/Games/SNES/Soul Blazer (SNES)/Wiki/Soul Blazer.wikitext
@@ -107,6 +107,18 @@ Soul Blazer features over 50 enemy types across 6 acts, spawning from Soul Lairs
 
 Equipment includes 8 swords, 8 armor pieces, and 8 magic types.
 
+==Magic==
+{{Main|Soul Blazer:Magic}}
+
+Soul Blazer features 8 magic types collected throughout the game:
+* Soul Blade, Flame Ball, Light Arrow, Magic Flare
+* Rotator, Spark Bomb, Flame Pillar, Tornado
+
+==Maps and Areas==
+{{Main|Soul Blazer:Maps}}
+
+The game world consists of 32 interconnected maps across 6 acts, with over 170 Soul Lairs to clear.
+
 ==Progression==
 {{Main|Soul Blazer:Progression}}
 
